--- a/css/main.css
+++ b/css/main.css
@@ -141,3 +141,11 @@ body {
    bottom:20px;
    background-color: yellow;
 }
+
+.link{
+    color: #3260b1;
+}
+
+.link:hover{
+    text-decoration: underline;
+}
