--- a/css/main1.css
+++ b/css/main1.css
@@ -41,7 +41,7 @@ body {
 .questions-section {
     max-width: 38em;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: 50%;
     margin-top: 2em;
 }
 
@@ -229,4 +229,12 @@ a {
     .content-footer {
         padding: 2em 2.5em;
   }
+}
+
+.link{
+  color: #3260b1;
+}
+
+.link:hover{
+  text-decoration: underline;
 }
