--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ body {
     overflow:hidden
 }
 
+
 .container {
 	height: 100%;
 	width: 100%;
@@ -19,7 +20,17 @@ body {
     white-space: nowrap;
 }
 
-.text{
+.h1{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    color: white;
+    font-size: 55px;
+    text-align: center; 
+    opacity: 0.8;
+}
+
+.animation{
     font-family: 'Montserrat', sans-serif;
     font-weight: normal;
     font-style: normal;
@@ -142,10 +153,105 @@ body {
    background-color: yellow;
 }
 
-.link{
-    color: #3260b1;
-}
+.animation {
+    position: relative;
+    width: 100%;
+  }
+  .animation div {
+    overflow: hidden;
+    width: 50%;
+    height: 100%;
+    transform: skewX(-20deg);
+  }
+  .animation div::before {
+    content: "";
+    position: absolute;
+    width: 0%;
+    height: 4px;
+    background: #fff;
+  }
+  .animation span {
+    padding: 0 10px;
+  }
+  .animation-left::before {
+    left: 0;
+    animation: widthLineLeft 1.2s 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.1) forwards;
+  }
+  .animation-left span {
+    display: block;
+    animation: slideLeft 1.2s 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.1) forwards;
+    transform: translateX(200px) skewX(20deg);
+  }
+  .animation-right {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .animation-right:before {
+    bottom: 0;
+    right: 0;
+    animation: widthLineRight 1.2s 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.1) forwards;
+  }
+  .animation-right span {
+    position: absolute;
+    width: 100%;
+    left: -100%;
+    transform: translateX(-200px) skewX(20deg);
+    animation: slideRight 1.2s 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.1) forwards;
+  }
+  @keyframes slideLeft {
+    from {
+      transform: translateX(300px) skewX(20deg);
+    }
+    to {
+      transform: translateX(0%) skewX(20deg);
+    }
+  }
+  @keyframes slideRight {
+    from {
+      transform: translateX(-300px) skewX(20deg);
+    }
+    to {
+      transform: translateX(0%) skewX(20deg);
+    }
+  }
+  @keyframes widthLineLeft {
+    0% {
+      width: 0%;
+      left: 0%;
+    }
+    50% {
+      width: 100%;
+      left: 0%;
+    }
+    100% {
+      width: 0%;
+      left: 100%;
+    }
+  }
+  @keyframes widthLineRight {
+    0% {
+      width: 0%;
+      right: 0%;
+    }
+    50% {
+      width: 100%;
+      right: 0%;
+    }
+    100% {
+      width: 0%;
+      right: 100%;
+    }
+  }
 
-.link:hover{
-    text-decoration: underline;
-}
+  .container1 {  
+    flex-direction: column
+  }
+
+  .links{
+      margin-left: 25%;
+      width: 80%;
+  }
+  .icon{
+      width: 15%;
+  }
